fix overflowing code in ui

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -78,6 +78,7 @@ input {
   padding: 0.8em;
   width: 100%;
   border: none;
+  overflow: hidden;
 }
 
 .post-data-section {
